--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Vijay svijayr007@gmailcom",
   "license": "ISC",
   "devDependencies": {
+    "@types/node-fetch": "^2.6.2",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
     "@typescript-eslint/parser": "^5.44.0",
     "eslint": "^8.28.0",
@@ -22,9 +23,14 @@
   },
   "dependencies": {
     "@types/cron": "^2.0.0",
+    "@types/luxon": "^3.1.0",
     "@types/pg": "^8.6.5",
     "@types/uuid": "^8.3.4",
+    "axios": "^1.2.0",
+    "cheerio": "^1.0.0-rc.12",
     "cron": "^2.1.0",
+    "luxon": "^3.1.0",
+    "node-fetch": "^2.6.1",
     "pg": "^8.8.0",
     "ts-node": "^10.9.1",
     "uuid": "^9.0.0"
