--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint:fix": "eslint --ext .ts --ext .js . --fix"
   },
   "keywords": [],
-  "author": "Vijay svijayr007@gmailcom",
+  "author": "Vijay svijayr007@gmail.com",
   "license": "ISC",
   "devDependencies": {
     "@types/node-fetch": "^2.6.2",
